--- a/assets/plugin/index.scss
+++ b/assets/plugin/index.scss
@@ -1,15 +1,3 @@
-#aesirx-analytics-blocking-cookies {
-  min-width: 800px;
-  .aesirx-analytics-cookie-row {
-    & > td {
-      padding-top: 0;
-      padding-left: 0;
-      input {
-        width: 100%;
-      }
-    }
-  }
-}
 .settings_page_aesirx-analytics-plugin {
   ul.description,
   p.description {
@@ -28,5 +16,185 @@
       padding-top: 0;
       padding-left: 0;
     }
+  }
+}
+#aesirx_heading,
+#aesirx_description {
+  margin-left: 12px;
+}
+.aesirx_analytics_info {
+  margin-top: 1rem;
+  background-image: url('../images/Hero.png');
+  background-size: cover;
+  background-position: 100%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  padding: 40px 2rem;
+  color: #fff;
+  margin-right: 12px;
+  margin-left: 12px;
+  .wrap {
+    font-size: 1.5rem;
+
+    color: #fff;
+    h3 {
+      color: #fff;
+    }
+
+    ul {
+      list-style: disc;
+      list-style-position: inside;
+
+      li {
+        padding: 5px 0px;
+      }
+    }
+    .banner-description {
+      font-size: 15px;
+      margin-bottom: 5px;
+      margin-top: 25px;
+    }
+    .banner-description-bold {
+      font-size: 18px;
+      margin-top: 15px;
+    }
+    a {
+      color: #fff;
+      background-color: #1ab394;
+      border-color: #1ab394;
+      padding: 13px 30px;
+      font-size: 18px;
+      border-radius: 10px;
+      line-height: 1.5;
+      display: inline-block;
+      border-radius: 0.375rem;
+      text-decoration: none;
+      img {
+        vertical-align: middle;
+        margin-bottom: 4px;
+        margin-right: 5px;
+      }
+    }
+  }
+}
+.aesirx_analytics_wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 12px;
+  margin-right: 12px;
+  .form_wrapper {
+    width: calc(75% - 20px);
+    form {
+      background: rgba(255, 255, 255, 0.45);
+      padding: 24px;
+      border-radius: 16px;
+      .form-table {
+        margin-top: 0;
+      }
+      .input_container {
+        position: relative;
+        width: 350px;
+        input[type='text'] {
+          width: 100%;
+        }
+      }
+      .input_information {
+        position: absolute;
+        right: 12px;
+        top: 12px;
+        img {
+          cursor: pointer;
+        }
+        &:hover {
+          .input_information_content {
+            display: block;
+          }
+        }
+        .input_information_content {
+          display: none;
+          position: absolute;
+          top: 100%;
+          padding: 10px;
+          background-color: #fff;
+          border-radius: 10px;
+          border: 1px solid #3c3c435c;
+          width: 300px;
+          z-index: 1;
+        }
+      }
+      input[type='text'] {
+        height: 44px;
+        padding: 12px 36px 12px 12px;
+        border: 1px solid rgba(17, 17, 17, 0.2509803922);
+        border-radius: 10px;
+      }
+    }
+  }
+  .aesirx_analytics_right_section {
+    width: calc(25% - 20px);
+    .aesirx_analytics_register_license {
+      background: #fff;
+      padding: 24px;
+      border-radius: 16px;
+      margin-bottom: 40px;
+      p {
+        font-size: 16px;
+      }
+      img {
+        margin: 0 auto;
+        display: block;
+      }
+      button,
+      a {
+        img {
+          margin-left: 4px;
+          margin-right: 0;
+        }
+      }
+      .aesirx_analytics_register_license_notice {
+        color: #ff3b30;
+        font-size: 18px;
+        margin-top: 16px;
+        margin-bottom: 24px;
+        a {
+          color: #ff3b30;
+          word-break: break-all;
+        }
+      }
+    }
+  }
+}
+.aesirx_btn_success {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 12px;
+  width: 100%;
+  text-decoration: none;
+  font-size: 16px;
+  margin-top: 15px;
+  box-shadow: none;
+  border: 0;
+  line-height: 20px;
+  cursor: pointer;
+  background: #1ab394;
+  color: #fff;
+  &:hover {
+    color: #fff;
+  }
+  img {
+    margin-left: 4px;
+  }
+}
+
+.submit_button {
+  width: auto;
+  padding: 14px 28px;
+  cursor: pointer;
+  img {
+    margin-right: 4px;
+    margin-left: 0;
   }
 }
